--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="/css/web.css" type="text/css">
+<link rel="stylesheet" href="../css/web.css" type="text/css">
+<!-- <link rel="stylesheet" href="../css/bootstrap-reboot.min.css"> -->
+<script src="../js/jquery-3.6.4.min.js"></script>
 <body >
    <div class="wrapper">
         <header>
@@ -15,13 +17,13 @@
                 <ul class="topMenu">
                     <!-- tạm thời để # sau có đủ thì bỏ -->
                     <li><a href="#">SHOP</a></li>
-                    <li><a href="#">TOPS</a></li>
-                    <li><a href="#">BOTTONS</a></li>
-                    <li><a href="#">OUTERWEAR</a></li>
-                    <li><a href="#">FOOTWEAR</a></li>
-                    <li><a href="#">HAT</a></li>
-                    <li><a href="#">BAGS</a></li>
-                    <li><a href="#">SALES</a></li>
+                    <li><a href="../html/tops.html">TOPS</a></li>
+                    <li><a href="../html/bottons.html">BOTTONS</a></li>
+                    <li><a href="../html/outerwear.html">OUTERWEAR</a></li>
+                    <li><a href="../html/footwear.html">FOOTWEAR</a></li>
+                    <li><a href="../html/hats.html">HAT</a></li>
+                    <li><a href="../html/bag.html">BAGS</a></li>
+                    <li><a href="../html/sales.html">SALES</a></li>
                     
                 </ul>
 
